--- a/webClient/assets/css/style.css
+++ b/webClient/assets/css/style.css
@@ -3,6 +3,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+input{
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 10px;
+    color: white;
+    padding: 10px;
+}
 .wrapper{
     background-color: #0D0D0D;
     width: 100%;
@@ -26,7 +33,6 @@
 }
 .header-wrapper{
     width: 90%;
-   /*  background-color: red; */
     height: 20%;
     display: flex;
     align-items:center;
@@ -46,12 +52,12 @@
 }
 
 .footer-wrapper{
+    margin-top: 15px;
     width: 90%;
-/*     background-color: green; */
     height: 20%;
     display: flex;
     flex-direction: column;
-    justify-content:space-around;
+    justify-content:space-between;
     align-items: center;
 }
 .footer-wrapper .input{
@@ -84,10 +90,24 @@
     display: flex;
     justify-content: space-evenly;
     width: 80%;
+    margin-top: 10px;
 }
-.tabs-item{
+
+.tab-item{
     width: 45px;
     height: 45px;
+    background-color: black;
+    border: none;
+    color: aliceblue;
+}
+.selected{
+    border: 1px solid white;
+    border-bottom: none;
+}
+@media (max-height: 380px) { 
+    .footer-wrapper{
+        height: 25%;
+    }
 }
 #hot-keys{
     display: flex;
